--- a/registro-hotel-mox-it.csproj
+++ b/registro-hotel-mox-it.csproj
@@ -9,16 +9,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Views\Customer\**" />
+    <Content Remove="Views\Customer\**" />
+    <EmbeddedResource Remove="Views\Customer\**" />
+    <None Remove="Views\Customer\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="7.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="7.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="7.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.5" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.6" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Views\Customer\" />
   </ItemGroup>
 
 </Project>
